RESOLVED FIXED202087
ServiceWorkerContextData does not need a sessionID
https://bugs.webkit.org/show_bug.cgi?id=202087
Summary ServiceWorkerContextData does not need a sessionID
Chris Dumez
Reported 2019-09-21 19:57:43 PDT
ServiceWorkerContextData does not need a sessionID.
Attachments
Patch (9.58 KB, patch)
2019-09-21 19:58 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-21 19:58:48 PDT
Chris Dumez
Comment 2 2019-09-21 22:17:42 PDT
Comment on attachment 379335 [details] Patch Clearing flags on attachment: 379335 Committed r250195: <https://trac.webkit.org/changeset/250195>
Chris Dumez
Comment 3 2019-09-21 22:17:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-09-21 22:18:18 PDT
Note You need to log in before you can comment on or make changes to this bug.