ServiceWorkerContextData does not need a sessionID https://bugs.webkit.org/show_bug.cgi?id=202087

Reviewed by Alex Christensen.

* workers/service/ServiceWorkerContextData.cpp:
(WebCore::ServiceWorkerContextData::isolatedCopy const):
* workers/service/ServiceWorkerContextData.h:
(WebCore::ServiceWorkerContextData::encode const):
(WebCore::ServiceWorkerContextData::decode):
* workers/service/server/RegistrationDatabase.cpp:
(WebCore::RegistrationDatabase::RegistrationDatabase):
(WebCore::RegistrationDatabase::importRecords):
* workers/service/server/RegistrationDatabase.h:
* workers/service/server/SWServer.cpp:
(WebCore::SWServer::updateWorker):
* workers/service/server/SWServerWorker.cpp:
(WebCore::SWServerWorker::contextData const):

Canonical link: https://commits.webkit.org/215692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250195 268f45cc-cd09-0410-ab3c-d52691b4dbfc