Source/WebCore/workers/service/server/RegistrationDatabase.h
@@ -79,7 +79,6 @@ private:
 
     Ref<WorkQueue> m_workQueue;
     WeakPtr<RegistrationStore> m_store;
-    PAL::SessionID m_sessionID;
     String m_databaseDirectory;
     String m_databaseFilePath;
     std::unique_ptr<SQLiteDatabase> m_database;
